--- a/temp.ipynb
+++ b/temp.ipynb
@@ -8,27 +8,24 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# === User input ===\n",
-    "current_month = input(\"Enter month (e.g. M06): \")  # still here if you want it later\n",
+    "# === User inputs ===\n",
+    "current_month = input(\"Enter month (e.g. M06): \")\n",
     "base_year = 2025\n",
     "other_year = 2024\n",
     "\n",
-    "input_file = \"your_input_file.xlsx\"  # <-- Change this to your input file name\n",
+    "input_file = \"your_input_file.xlsx\"  # <<== update this!\n",
     "xls = pd.ExcelFile(input_file)\n",
     "\n",
-    "# === Auto-detect sheets to process ===\n",
     "sheets_to_process = [s for s in xls.sheet_names if 'actual' in s.lower()]\n",
     "sheets_to_copy = [s for s in xls.sheet_names if s not in sheets_to_process]\n",
     "\n",
     "output_sheets = {}\n",
     "\n",
-    "# === Process sheets ===\n",
     "for sheet in sheets_to_process:\n",
-    "    print(f\"Processing sheet: {sheet}\")\n",
+    "    print(f\"Processing: {sheet}\")\n",
     "\n",
-    "    # Read raw to detect header row\n",
+    "    # Detect header\n",
     "    df_raw = pd.read_excel(xls, sheet_name=sheet, header=None)\n",
-    "\n",
     "    header_row_idx = df_raw.apply(\n",
     "        lambda row: row.astype(str).str.contains('Account', case=False).any()\n",
     "        and row.astype(str).str.contains('Entity', case=False).any()\n",
@@ -36,68 +33,65 @@
     "        axis=1\n",
     "    ).idxmax()\n",
     "\n",
-    "    print(f\"Detected header row at: {header_row_idx}\")\n",
-    "\n",
-    "    # Read sheet again with correct header\n",
     "    df = pd.read_excel(xls, sheet_name=sheet, header=header_row_idx)\n",
     "\n",
-    "    # Filter for each year\n",
-    "    df_base = df[df['Year'] == base_year].copy()\n",
-    "    df_other = df[df['Year'] == other_year].copy()\n",
+    "    # Clean names\n",
+    "    df.columns = df.columns.str.strip().str.replace(' ', '')\n",
+    "    df.columns = df.columns.str.replace('YTD$', 'YTD12')\n",
     "\n",
-    "    # Define base columns (12 months + YTD12)\n",
-    "    base_cols = ['Account', 'Entity', 'Level 4', 'YTD'] + [f\"M{str(i).zfill(2)}\" for i in range(1, 13)]\n",
+    "    # Create master key\n",
+    "    key_cols = ['Account', 'Entity', 'Level4']\n",
+    "    df.rename(columns={'Level4': 'Level4'}, inplace=True)\n",
+    "    all_keys = df[key_cols].drop_duplicates()\n",
     "\n",
-    "    # Pick only needed cols\n",
-    "    df_base = df_base[['Account', 'Entity', 'Level 4'] + base_cols[3:]]\n",
-    "    df_other = df_other[['Account', 'Entity', 'Level 4', 'YTD']]\n",
+    "    # Base columns\n",
+    "    base_cols = ['YTD12'] + [f\"M{str(i).zfill(2)}\" for i in range(1, 13)]\n",
     "\n",
-    "    # Group by keys to sum duplicates\n",
-    "    df_base = df_base.groupby(['Account', 'Entity', 'Level 4'], as_index=False).sum()\n",
-    "    df_other = df_other.groupby(['Account', 'Entity', 'Level 4'], as_index=False).sum()\n",
+    "    # Start output frame\n",
+    "    df_out = all_keys.copy()\n",
     "\n",
-    "    # Merge on keys\n",
-    "    df_merged = pd.merge(\n",
-    "        df_base,\n",
-    "        df_other,\n",
-    "        on=['Account', 'Entity', 'Level 4'],\n",
-    "        how='outer',\n",
-    "        suffixes=('', f'_{other_year}')\n",
-    "    ).fillna(0)\n",
+    "    # === Fill 2025 block ===\n",
+    "    df_2025 = df[df['Year'] == base_year][key_cols + base_cols].copy()\n",
+    "    df_2025 = df_2025.groupby(key_cols, as_index=False).sum()\n",
     "\n",
-    "    # Safeguard for missing column\n",
-    "    if f'YTD_{other_year}' not in df_merged.columns:\n",
-    "        df_merged[f'YTD_{other_year}'] = 0\n",
+    "    df_out = df_out.merge(df_2025, on=key_cols, how='left').fillna(0)\n",
     "\n",
-    "    # Build final columns\n",
-    "    df_final = df_merged[['Account', 'Entity', 'Level 4'] + base_cols[3:] + [f'YTD_{other_year}']]\n",
-    "    df_final.rename(columns={f'YTD_{other_year}': 'YTD12'}, inplace=True)\n",
+    "    # === Fill 2024 YTD12 ===\n",
+    "    df_2024 = df[df['Year'] == other_year][key_cols + ['YTD12']].copy()\n",
+    "    df_2024 = df_2024.groupby(key_cols, as_index=False).sum()\n",
+    "    df_out = df_out.merge(df_2024, on=key_cols, how='left', suffixes=('', f'_{other_year}')).fillna(0)\n",
     "\n",
-    "    # Build multi-row header\n",
+    "    # Rename last col to YTD12 for clarity\n",
+    "    df_out.rename(columns={f'YTD12_{other_year}': 'YTD12_other'}, inplace=True)\n",
+    "\n",
+    "    # === Build multi-row header ===\n",
     "    year_row = (\n",
     "        [''] * 3 +\n",
-    "        [str(base_year)] * len(base_cols[3:]) +\n",
+    "        [str(base_year)] * len(base_cols) +\n",
     "        [str(other_year)]\n",
     "    )\n",
-    "    header_row = ['Account', 'Entity', 'Level 4'] + base_cols[3:] + ['YTD12']\n",
+    "    header_row = key_cols + base_cols + ['YTD12']\n",
     "\n",
-    "    # Insert year row on top\n",
-    "    df_final.columns = header_row\n",
-    "    df_final.loc[-1] = year_row\n",
-    "    df_final.index = df_final.index + 1\n",
-    "    df_final = df_final.sort_index()\n",
+    "    # Reorder columns\n",
+    "    df_out = df_out[key_cols + base_cols + ['YTD12_other']]\n",
+    "    df_out.rename(columns={'YTD12_other': 'YTD12'}, inplace=True)\n",
     "\n",
-    "    output_sheets[sheet] = df_final\n",
+    "    # Add header rows\n",
+    "    df_out_final = pd.concat(\n",
+    "        [pd.DataFrame([year_row]), pd.DataFrame([header_row]), df_out],\n",
+    "        ignore_index=True\n",
+    "    )\n",
     "\n",
-    "# === Copy unprocessed sheets ===\n",
+    "    output_sheets[sheet] = df_out_final\n",
+    "\n",
+    "# Copy unprocessed sheets\n",
     "for sheet in sheets_to_copy:\n",
-    "    print(f\"Copying unprocessed sheet: {sheet}\")\n",
+    "    print(f\"Copying unchanged: {sheet}\")\n",
     "    df = pd.read_excel(xls, sheet_name=sheet)\n",
     "    output_sheets[sheet] = df\n",
     "\n",
-    "# === Write to final output ===\n",
+    "# Write all\n",
     "output_file = \"Total PV.xlsx\"\n",
-    "\n",
     "with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
     "    for sheet_name, df in output_sheets.items():\n",
     "        df.to_excel(\n",
@@ -107,7 +101,7 @@
     "            sheet_name=sheet_name\n",
     "        )\n",
     "\n",
-    "print(f\"✅ Done! Final file saved as: {output_file}\")\n"
+    "print(f\"✅ Done! Saved as {output_file}\")\n"
    ]
   },
   {
