--- a/temp.ipynb
+++ b/temp.ipynb
@@ -8,23 +8,25 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# === User inputs ===\n",
+    "# === USER INPUT ===\n",
     "current_month = input(\"Enter month (e.g. M06): \")\n",
     "base_year = 2025\n",
     "other_year = 2024\n",
     "\n",
-    "input_file = \"your_input_file.xlsx\"  # <<== update this!\n",
+    "input_file = \"your_input_file.xlsx\"  # <<-- UPDATE to your file name!\n",
     "xls = pd.ExcelFile(input_file)\n",
     "\n",
+    "# === Identify sheets ===\n",
     "sheets_to_process = [s for s in xls.sheet_names if 'actual' in s.lower()]\n",
     "sheets_to_copy = [s for s in xls.sheet_names if s not in sheets_to_process]\n",
     "\n",
     "output_sheets = {}\n",
     "\n",
+    "# === Process each 'Actual' sheet ===\n",
     "for sheet in sheets_to_process:\n",
     "    print(f\"Processing: {sheet}\")\n",
     "\n",
-    "    # Detect header\n",
+    "    # === Detect header ===\n",
     "    df_raw = pd.read_excel(xls, sheet_name=sheet, header=None)\n",
     "    header_row_idx = df_raw.apply(\n",
     "        lambda row: row.astype(str).str.contains('Account', case=False).any()\n",
@@ -35,25 +37,26 @@
     "\n",
     "    df = pd.read_excel(xls, sheet_name=sheet, header=header_row_idx)\n",
     "\n",
-    "    # Clean names\n",
+    "    # === Normalize column names ===\n",
     "    df.columns = df.columns.str.strip().str.replace(' ', '')\n",
     "    df.columns = df.columns.str.replace('YTD$', 'YTD12')\n",
     "\n",
-    "    # Create master key\n",
+    "    # === Key columns ===\n",
     "    key_cols = ['Account', 'Entity', 'Level4']\n",
-    "    df.rename(columns={'Level4': 'Level4'}, inplace=True)\n",
+    "    df.rename(columns={'Level4': 'Level4'}, inplace=True)  # just in case\n",
+    "\n",
+    "    # === Master key ===\n",
     "    all_keys = df[key_cols].drop_duplicates()\n",
     "\n",
-    "    # Base columns\n",
+    "    # === Base columns ===\n",
     "    base_cols = ['YTD12'] + [f\"M{str(i).zfill(2)}\" for i in range(1, 13)]\n",
     "\n",
-    "    # Start output frame\n",
+    "    # === Start output ===\n",
     "    df_out = all_keys.copy()\n",
     "\n",
     "    # === Fill 2025 block ===\n",
     "    df_2025 = df[df['Year'] == base_year][key_cols + base_cols].copy()\n",
     "    df_2025 = df_2025.groupby(key_cols, as_index=False).sum()\n",
-    "\n",
     "    df_out = df_out.merge(df_2025, on=key_cols, how='left').fillna(0)\n",
     "\n",
     "    # === Fill 2024 YTD12 ===\n",
@@ -61,10 +64,13 @@
     "    df_2024 = df_2024.groupby(key_cols, as_index=False).sum()\n",
     "    df_out = df_out.merge(df_2024, on=key_cols, how='left', suffixes=('', f'_{other_year}')).fillna(0)\n",
     "\n",
-    "    # Rename last col to YTD12 for clarity\n",
-    "    df_out.rename(columns={f'YTD12_{other_year}': 'YTD12_other'}, inplace=True)\n",
+    "    # === Final column order ===\n",
+    "    df_out = df_out[key_cols + base_cols + [f'YTD12_{other_year}']]\n",
     "\n",
-    "    # === Build multi-row header ===\n",
+    "    # === Reset real columns so there's no shift when saving ===\n",
+    "    df_out.columns = range(len(df_out.columns))\n",
+    "\n",
+    "    # === Build final header rows ===\n",
     "    year_row = (\n",
     "        [''] * 3 +\n",
     "        [str(base_year)] * len(base_cols) +\n",
@@ -72,11 +78,7 @@
     "    )\n",
     "    header_row = key_cols + base_cols + ['YTD12']\n",
     "\n",
-    "    # Reorder columns\n",
-    "    df_out = df_out[key_cols + base_cols + ['YTD12_other']]\n",
-    "    df_out.rename(columns={'YTD12_other': 'YTD12'}, inplace=True)\n",
-    "\n",
-    "    # Add header rows\n",
+    "    # === Combine header rows + data ===\n",
     "    df_out_final = pd.concat(\n",
     "        [pd.DataFrame([year_row]), pd.DataFrame([header_row]), df_out],\n",
     "        ignore_index=True\n",
@@ -84,13 +86,13 @@
     "\n",
     "    output_sheets[sheet] = df_out_final\n",
     "\n",
-    "# Copy unprocessed sheets\n",
+    "# === Copy other sheets ===\n",
     "for sheet in sheets_to_copy:\n",
     "    print(f\"Copying unchanged: {sheet}\")\n",
     "    df = pd.read_excel(xls, sheet_name=sheet)\n",
     "    output_sheets[sheet] = df\n",
     "\n",
-    "# Write all\n",
+    "# === Write final output ===\n",
     "output_file = \"Total PV.xlsx\"\n",
     "with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
     "    for sheet_name, df in output_sheets.items():\n",
@@ -101,7 +103,7 @@
     "            sheet_name=sheet_name\n",
     "        )\n",
     "\n",
-    "print(f\"✅ Done! Saved as {output_file}\")\n"
+    "print(f\"✅✅✅ DONE! Output saved as: {output_file}\")\n"
    ]
   },
   {
