--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,6 +3,182 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0d97cdd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from collections import defaultdict, deque\n",
+    "import re\n",
+    "\n",
+    "INPUT_FILE = \"GHA_source.xlsx\"\n",
+    "INPUT_SHEET = \"Data\"\n",
+    "ID_COL = \"Employee ID\"\n",
+    "MGR_COL = \"Entity Manager Employee ID\"\n",
+    "BF2_COL = \"BF Level 2 Name\"\n",
+    "GCB_COL = \"Global Career Band\"\n",
+    "\n",
+    "OUTPUT_COLS = [\n",
+    "    \"Employee ID\", \"Employee Name\", \"Employee Business Email Address\",\n",
+    "    \"Global Career Band\", \"Employee Type\", \"Employee Status\",\n",
+    "    \"Legal Entity Name\", \"Work Location City\",\n",
+    "    \"Entity Manager Employee ID\", \"Entity Manager Employee Name\",\n",
+    "    \"Functional Manager Employee ID\", \"Functional Manager Employee Name\"\n",
+    "]\n",
+    "\n",
+    "GCB_ORDER = {\"MD\": 0, \"3\": 1, \"4\": 2, \"5\": 3, \"6\": 4, \"7\": 5, \"8\": 6}\n",
+    "ALLOWED_ROOTS = {\"MD\", \"3\", \"4\"}\n",
+    "\n",
+    "def gcb_sort(val): \n",
+    "    return GCB_ORDER.get(str(val).strip(), 999)\n",
+    "\n",
+    "def sanitize(name): \n",
+    "    return re.sub(r'[\\[\\]\\:\\*\\?\\/\\\\]', '_', str(name))[:31]\n",
+    "\n",
+    "# ---------- Load data ----------\n",
+    "df = pd.read_excel(INPUT_FILE, sheet_name=INPUT_SHEET, dtype={ID_COL: str, MGR_COL: str})\n",
+    "df.columns = df.columns.str.strip()\n",
+    "df[ID_COL] = df[ID_COL].astype(str).str.strip()\n",
+    "df[MGR_COL] = df[MGR_COL].astype(str).str.strip()\n",
+    "\n",
+    "# ---------- Build manager → children map ----------\n",
+    "children = defaultdict(list)\n",
+    "row_by_id = {}\n",
+    "\n",
+    "for _, r in df.iterrows():\n",
+    "    eid = r[ID_COL]\n",
+    "    row_by_id[eid] = r\n",
+    "    mid = r[MGR_COL]\n",
+    "    if pd.notna(mid) and mid:\n",
+    "        children[mid].append(eid)\n",
+    "\n",
+    "# Sort children lists\n",
+    "for k, lst in children.items():\n",
+    "    children[k] = sorted(lst, key=lambda x: (gcb_sort(row_by_id[x][GCB_COL]), row_by_id[x][\"Employee Name\"]))\n",
+    "\n",
+    "# ---------- Prepare workbook ----------\n",
+    "writer = pd.ExcelWriter(\"TaskOne_v2_BF2_Hierarchy.xlsx\", engine=\"xlsxwriter\")\n",
+    "unmapped_rows = []\n",
+    "\n",
+    "# Unique BF Level 2s\n",
+    "bf2_names = df[BF2_COL].dropna().unique()\n",
+    "\n",
+    "for bf2 in bf2_names:\n",
+    "    scope_df = df[df[BF2_COL] == bf2]\n",
+    "    scope_ids = set(scope_df[ID_COL])\n",
+    "    visited = set()\n",
+    "    out_rows = []\n",
+    "\n",
+    "    # Roots: allowed GCBs or manager outside this BF2\n",
+    "    roots = scope_df[\n",
+    "        (scope_df[GCB_COL].isin(ALLOWED_ROOTS)) | (~scope_df[MGR_COL].isin(scope_ids))\n",
+    "    ][ID_COL].tolist()\n",
+    "\n",
+    "    for root in sorted(roots, key=lambda x: (gcb_sort(row_by_id[x][GCB_COL]), row_by_id[x][\"Employee Name\"])):\n",
+    "        if root in visited:\n",
+    "            continue\n",
+    "\n",
+    "        q = deque([(root, 0)])\n",
+    "        while q:\n",
+    "            eid, depth = q.popleft()\n",
+    "            if eid in visited or eid not in scope_ids:\n",
+    "                continue\n",
+    "            visited.add(eid)\n",
+    "\n",
+    "            r = row_by_id[eid]\n",
+    "            row_data = {col: r.get(col, \"\") for col in OUTPUT_COLS}\n",
+    "            row_data[\"Hierarchy Level\"] = depth\n",
+    "            out_rows.append(row_data)\n",
+    "\n",
+    "            for kid in children.get(eid, []):\n",
+    "                if kid in scope_ids and kid not in visited:\n",
+    "                    q.append((kid, depth + 1))\n",
+    "\n",
+    "    # Unmapped employees (not reached from any root)\n",
+    "    unmapped_ids = scope_ids - visited\n",
+    "    for uid in unmapped_ids:\n",
+    "        unmapped_rows.append(row_by_id[uid])\n",
+    "\n",
+    "    # Save this BF2 sheet\n",
+    "    sheet_df = pd.DataFrame(out_rows, columns=OUTPUT_COLS + [\"Hierarchy Level\"])\n",
+    "    sheet_name = sanitize(bf2)\n",
+    "    if sheet_df.empty:\n",
+    "        sheet_df = pd.DataFrame(columns=OUTPUT_COLS + [\"Hierarchy Level\"])\n",
+    "    sheet_df.to_excel(writer, sheet_name=sheet_name, index=False)\n",
+    "\n",
+    "# ---------- Save unmapped employees ----------\n",
+    "if unmapped_rows:\n",
+    "    unmapped_df = pd.DataFrame(unmapped_rows, columns=df.columns)\n",
+    "    unmapped_df.to_excel(writer, sheet_name=\"Unmapped_Employees\", index=False)\n",
+    "\n",
+    "writer.close()\n",
+    "print(\"✅ Created TaskOne_v2_BF2_Hierarchy.xlsx\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "564c28f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated DataFrame:\n",
+      "       A      B      C           D           E\n",
+      "0   5000   1000  20000         1.0        -1.0\n",
+      "1  15000   8000   5000  found data         1.0\n",
+      "2   7000  12000   8000         inf  found data\n",
+      "3   3000   4000   6000         0.0         1.0\n",
+      "4  12000  12200    900         2.0  found data\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Sample dataframe\n",
+    "data = {\n",
+    "    'A': [5000, 15000, 7000, 3000,12000],\n",
+    "    'B': [1000, 8000, 12000, 4000,12200],\n",
+    "    'C': [20000, 5000, 8000, 6000,900],\n",
+    "    'D': [1, -1, np.inf, 0,2],\n",
+    "    'E': [-1, 1, np.inf, 1,-np.inf]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# List of columns to check for > 10,000\n",
+    "cols = ['A', 'B', 'C']\n",
+    "\n",
+    "# Corresponding list of columns to check specific values\n",
+    "cols_to_check = ['D', 'E', 'A']  # Assuming correspondence is by index\n",
+    "\n",
+    "# Specific values to check\n",
+    "specific_values = [1, -1, np.inf, -np.inf]\n",
+    "\n",
+    "# Iterate through each column pair by index\n",
+    "for i, col in enumerate(cols):\n",
+    "#     if col in df.columns and cols_to_check[i] in df.columns:\n",
+    "        # Get rows where the value in the current column is > 10,000\n",
+    "    high_value_rows = df[col] > 10000\n",
+    "\n",
+    "    # Check the corresponding column for specific values\n",
+    "    valid_rows = df.loc[high_value_rows, cols_to_check[i]].isin(specific_values)\n",
+    "\n",
+    "    # Update the corresponding column value to \"found data\"\n",
+    "    df.loc[high_value_rows & valid_rows, cols_to_check[i]] = \"found data\"\n",
+    "\n",
+    "# Results\n",
+    "print(\"Updated DataFrame:\")\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "43c7a6df",
    "metadata": {},
    "outputs": [],
