--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,116 +3,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d97cdd6",
+   "id": "6662be54",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from collections import defaultdict, deque\n",
-    "import re\n",
+    "from collections import defaultdict\n",
     "\n",
-    "INPUT_FILE = \"GHA_source.xlsx\"\n",
-    "INPUT_SHEET = \"Data\"\n",
-    "ID_COL = \"Employee ID\"\n",
-    "MGR_COL = \"Entity Manager Employee ID\"\n",
-    "BF2_COL = \"BF Level 2 Name\"\n",
-    "GCB_COL = \"Global Career Band\"\n",
+    "# Load GHA source (same as before)\n",
+    "df = pd.read_excel(\"GHA_source.xlsx\", sheet_name=\"Data\", dtype=str)\n",
     "\n",
-    "OUTPUT_COLS = [\n",
-    "    \"Employee ID\", \"Employee Name\", \"Employee Business Email Address\",\n",
-    "    \"Global Career Band\", \"Employee Type\", \"Employee Status\",\n",
-    "    \"Legal Entity Name\", \"Work Location City\",\n",
-    "    \"Entity Manager Employee ID\", \"Entity Manager Employee Name\",\n",
-    "    \"Functional Manager Employee ID\", \"Functional Manager Employee Name\"\n",
-    "]\n",
-    "\n",
-    "GCB_ORDER = {\"MD\": 0, \"3\": 1, \"4\": 2, \"5\": 3, \"6\": 4, \"7\": 5, \"8\": 6}\n",
-    "ALLOWED_ROOTS = {\"MD\", \"3\", \"4\"}\n",
-    "\n",
-    "def gcb_sort(val): \n",
-    "    return GCB_ORDER.get(str(val).strip(), 999)\n",
-    "\n",
-    "def sanitize(name): \n",
-    "    return re.sub(r'[\\[\\]\\:\\*\\?\\/\\\\]', '_', str(name))[:31]\n",
-    "\n",
-    "# ---------- Load data ----------\n",
-    "df = pd.read_excel(INPUT_FILE, sheet_name=INPUT_SHEET, dtype={ID_COL: str, MGR_COL: str})\n",
-    "df.columns = df.columns.str.strip()\n",
-    "df[ID_COL] = df[ID_COL].astype(str).str.strip()\n",
-    "df[MGR_COL] = df[MGR_COL].astype(str).str.strip()\n",
-    "\n",
-    "# ---------- Build manager → children map ----------\n",
+    "# Build children mapping\n",
     "children = defaultdict(list)\n",
     "row_by_id = {}\n",
     "\n",
     "for _, r in df.iterrows():\n",
-    "    eid = r[ID_COL]\n",
+    "    eid = r[\"Employee ID\"]\n",
     "    row_by_id[eid] = r\n",
-    "    mid = r[MGR_COL]\n",
+    "    mid = r[\"Entity Manager Employee ID\"]\n",
     "    if pd.notna(mid) and mid:\n",
     "        children[mid].append(eid)\n",
     "\n",
-    "# Sort children lists\n",
-    "for k, lst in children.items():\n",
-    "    children[k] = sorted(lst, key=lambda x: (gcb_sort(row_by_id[x][GCB_COL]), row_by_id[x][\"Employee Name\"]))\n",
+    "# Custom GCB sort order\n",
+    "GCB_ORDER = {\"MD\":0, \"3\":1, \"4\":2, \"5\":3, \"6\":4, \"7\":5, \"8\":6}\n",
+    "def gcb_sort(eid): \n",
+    "    return GCB_ORDER.get(str(row_by_id[eid][\"Global Career Band\"]).strip(), 999)\n",
     "\n",
-    "# ---------- Prepare workbook ----------\n",
-    "writer = pd.ExcelWriter(\"TaskOne_v2_BF2_Hierarchy.xlsx\", engine=\"xlsxwriter\")\n",
-    "unmapped_rows = []\n",
+    "# Traverse tree recursively\n",
+    "def traverse(eid, level, seen, out_rows):\n",
+    "    # Avoid repeating non-GCB3/GCB4 employees\n",
+    "    gcb = str(row_by_id[eid][\"Global Career Band\"]).strip()\n",
+    "    if eid in seen and gcb not in (\"3\", \"4\"):\n",
+    "        return\n",
     "\n",
-    "# Unique BF Level 2s\n",
-    "bf2_names = df[BF2_COL].dropna().unique()\n",
+    "    # Mark seen\n",
+    "    seen.add(eid)\n",
     "\n",
-    "for bf2 in bf2_names:\n",
-    "    scope_df = df[df[BF2_COL] == bf2]\n",
-    "    scope_ids = set(scope_df[ID_COL])\n",
-    "    visited = set()\n",
+    "    # Add row with indent\n",
+    "    row = row_by_id[eid].to_dict()\n",
+    "    row[\"Level\"] = level\n",
+    "    row[\"Indented Name\"] = \"   \" * level + row.get(\"Employee Name\", \"\")\n",
+    "    out_rows.append(row)\n",
+    "\n",
+    "    # Sort children by GCB order then Name\n",
+    "    for cid in sorted(children.get(eid, []), key=lambda x: (gcb_sort(x), row_by_id[x][\"Employee Name\"])):\n",
+    "        traverse(cid, level + 1, seen, out_rows)\n",
+    "\n",
+    "# Process each BF Level 2\n",
+    "writer = pd.ExcelWriter(\"TaskOne_v4_TreeLayout.xlsx\", engine=\"xlsxwriter\")\n",
+    "unmapped = []\n",
+    "\n",
+    "for bf2 in df[\"BF Level 2 Name\"].dropna().unique():\n",
+    "    scope_df = df[df[\"BF Level 2 Name\"] == bf2]\n",
+    "    seen = set()\n",
     "    out_rows = []\n",
     "\n",
-    "    # Roots: allowed GCBs or manager outside this BF2\n",
+    "    # Roots = MD or whose manager not in this BF2\n",
     "    roots = scope_df[\n",
-    "        (scope_df[GCB_COL].isin(ALLOWED_ROOTS)) | (~scope_df[MGR_COL].isin(scope_ids))\n",
-    "    ][ID_COL].tolist()\n",
+    "        (scope_df[\"Global Career Band\"] == \"MD\") |\n",
+    "        (~scope_df[\"Entity Manager Employee ID\"].isin(scope_df[\"Employee ID\"]))\n",
+    "    ][\"Employee ID\"]\n",
     "\n",
-    "    for root in sorted(roots, key=lambda x: (gcb_sort(row_by_id[x][GCB_COL]), row_by_id[x][\"Employee Name\"])):\n",
-    "        if root in visited:\n",
-    "            continue\n",
+    "    for root in sorted(roots, key=lambda x: row_by_id[x][\"Employee Name\"]):\n",
+    "        traverse(root, 0, seen, out_rows)\n",
     "\n",
-    "        q = deque([(root, 0)])\n",
-    "        while q:\n",
-    "            eid, depth = q.popleft()\n",
-    "            if eid in visited or eid not in scope_ids:\n",
-    "                continue\n",
-    "            visited.add(eid)\n",
-    "\n",
-    "            r = row_by_id[eid]\n",
-    "            row_data = {col: r.get(col, \"\") for col in OUTPUT_COLS}\n",
-    "            row_data[\"Hierarchy Level\"] = depth\n",
-    "            out_rows.append(row_data)\n",
-    "\n",
-    "            for kid in children.get(eid, []):\n",
-    "                if kid in scope_ids and kid not in visited:\n",
-    "                    q.append((kid, depth + 1))\n",
-    "\n",
-    "    # Unmapped employees (not reached from any root)\n",
-    "    unmapped_ids = scope_ids - visited\n",
+    "    # Capture unmapped employees\n",
+    "    unmapped_ids = set(scope_df[\"Employee ID\"]) - seen\n",
     "    for uid in unmapped_ids:\n",
-    "        unmapped_rows.append(row_by_id[uid])\n",
+    "        unmapped.append(row_by_id[uid])\n",
     "\n",
-    "    # Save this BF2 sheet\n",
-    "    sheet_df = pd.DataFrame(out_rows, columns=OUTPUT_COLS + [\"Hierarchy Level\"])\n",
-    "    sheet_name = sanitize(bf2)\n",
-    "    if sheet_df.empty:\n",
-    "        sheet_df = pd.DataFrame(columns=OUTPUT_COLS + [\"Hierarchy Level\"])\n",
-    "    sheet_df.to_excel(writer, sheet_name=sheet_name, index=False)\n",
+    "    sheet_df = pd.DataFrame(out_rows)\n",
+    "    sheet_df.to_excel(writer, sheet_name=bf2[:31], index=False)\n",
     "\n",
-    "# ---------- Save unmapped employees ----------\n",
-    "if unmapped_rows:\n",
-    "    unmapped_df = pd.DataFrame(unmapped_rows, columns=df.columns)\n",
-    "    unmapped_df.to_excel(writer, sheet_name=\"Unmapped_Employees\", index=False)\n",
+    "if unmapped:\n",
+    "    pd.DataFrame(unmapped).to_excel(writer, sheet_name=\"Unmapped_Employees\", index=False)\n",
     "\n",
-    "writer.close()\n",
-    "print(\"✅ Created TaskOne_v2_BF2_Hierarchy.xlsx\")\n"
+    "writer.close()\n"
    ]
   },
   {
