--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,82 +3,91 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6662be54",
+   "id": "edb720fa",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from collections import defaultdict\n",
     "\n",
-    "# Load GHA source (same as before)\n",
-    "df = pd.read_excel(\"GHA_source.xlsx\", sheet_name=\"Data\", dtype=str)\n",
+    "INPUT_FILE = \"GHA_source.xlsx\"\n",
+    "INPUT_SHEET = \"Data\"\n",
     "\n",
-    "# Build children mapping\n",
-    "children = defaultdict(list)\n",
-    "row_by_id = {}\n",
+    "ID_COL = \"Employee ID\"\n",
+    "NAME_COL = \"Employee Name\"\n",
+    "EMAIL_COL = \"Employee Business Email Address\"\n",
+    "GCB_COL = \"Global Career Band\"\n",
+    "MGR_COL = \"Entity Manager Employee ID\"\n",
+    "BF2_COL = \"BF Level 2 Name\"\n",
     "\n",
-    "for _, r in df.iterrows():\n",
-    "    eid = r[\"Employee ID\"]\n",
-    "    row_by_id[eid] = r\n",
-    "    mid = r[\"Entity Manager Employee ID\"]\n",
-    "    if pd.notna(mid) and mid:\n",
-    "        children[mid].append(eid)\n",
+    "# Read data\n",
+    "df = pd.read_excel(INPUT_FILE, sheet_name=INPUT_SHEET, dtype=str)\n",
+    "df.columns = df.columns.str.strip()\n",
     "\n",
-    "# Custom GCB sort order\n",
-    "GCB_ORDER = {\"MD\":0, \"3\":1, \"4\":2, \"5\":3, \"6\":4, \"7\":5, \"8\":6}\n",
-    "def gcb_sort(eid): \n",
-    "    return GCB_ORDER.get(str(row_by_id[eid][\"Global Career Band\"]).strip(), 999)\n",
+    "# Lookup dictionaries\n",
+    "row_by_id = df.set_index(ID_COL).to_dict(\"index\")\n",
     "\n",
-    "# Traverse tree recursively\n",
-    "def traverse(eid, level, seen, out_rows):\n",
-    "    # Avoid repeating non-GCB3/GCB4 employees\n",
-    "    gcb = str(row_by_id[eid][\"Global Career Band\"]).strip()\n",
-    "    if eid in seen and gcb not in (\"3\", \"4\"):\n",
-    "        return\n",
-    "\n",
-    "    # Mark seen\n",
-    "    seen.add(eid)\n",
-    "\n",
-    "    # Add row with indent\n",
-    "    row = row_by_id[eid].to_dict()\n",
-    "    row[\"Level\"] = level\n",
-    "    row[\"Indented Name\"] = \"   \" * level + row.get(\"Employee Name\", \"\")\n",
-    "    out_rows.append(row)\n",
-    "\n",
-    "    # Sort children by GCB order then Name\n",
-    "    for cid in sorted(children.get(eid, []), key=lambda x: (gcb_sort(x), row_by_id[x][\"Employee Name\"])):\n",
-    "        traverse(cid, level + 1, seen, out_rows)\n",
-    "\n",
-    "# Process each BF Level 2\n",
-    "writer = pd.ExcelWriter(\"TaskOne_v4_TreeLayout.xlsx\", engine=\"xlsxwriter\")\n",
-    "unmapped = []\n",
-    "\n",
-    "for bf2 in df[\"BF Level 2 Name\"].dropna().unique():\n",
-    "    scope_df = df[df[\"BF Level 2 Name\"] == bf2]\n",
+    "# Helper: find MD, GCB3, GCB4 up the chain\n",
+    "def trace_chain(emp_id):\n",
+    "    md = g3 = g4 = None\n",
     "    seen = set()\n",
+    "    curr = emp_id\n",
+    "    while curr and curr in row_by_id and curr not in seen:\n",
+    "        seen.add(curr)\n",
+    "        gcb = str(row_by_id[curr][GCB_COL]).strip()\n",
+    "        if gcb == \"MD\" and md is None:\n",
+    "            md = curr\n",
+    "        elif gcb == \"3\" and g3 is None:\n",
+    "            g3 = curr\n",
+    "        elif gcb == \"4\" and g4 is None:\n",
+    "            g4 = curr\n",
+    "        curr = row_by_id[curr].get(MGR_COL)\n",
+    "    return md, g3, g4\n",
+    "\n",
+    "# Columns for output\n",
+    "output_cols = [\n",
+    "    \"MD ID\", \"MD Name\", \"MD Email\",\n",
+    "    \"GCB3 ID\", \"GCB3 Name\", \"GCB3 Email\",\n",
+    "    \"GCB4 ID\", \"GCB4 Name\", \"GCB4 Email\"\n",
+    "] + [\n",
+    "    \"Employee ID\", \"Employee Name\", \"Employee Business Email Address\",\n",
+    "    \"Global Career Band\", \"Employee Type\", \"Employee Status\",\n",
+    "    \"Legal Entity Name\", \"Work Location City\",\n",
+    "    \"Entity Manager Employee ID\", \"Entity Manager Employee Name\",\n",
+    "    \"Functional Manager Employee ID\", \"Functional Manager Employee Name\"\n",
+    "]\n",
+    "\n",
+    "unmapped_rows = []\n",
+    "writer = pd.ExcelWriter(\"TaskOne_v5_ColumnPath.xlsx\", engine=\"xlsxwriter\")\n",
+    "\n",
+    "for bf2 in sorted(df[BF2_COL].dropna().unique()):\n",
     "    out_rows = []\n",
+    "    scope = df[df[BF2_COL] == bf2]\n",
+    "    for _, r in scope.iterrows():\n",
+    "        md, g3, g4 = trace_chain(r[ID_COL])\n",
+    "        if md is None and g3 is None and g4 is None:\n",
+    "            unmapped_rows.append(r)\n",
+    "            continue\n",
     "\n",
-    "    # Roots = MD or whose manager not in this BF2\n",
-    "    roots = scope_df[\n",
-    "        (scope_df[\"Global Career Band\"] == \"MD\") |\n",
-    "        (~scope_df[\"Entity Manager Employee ID\"].isin(scope_df[\"Employee ID\"]))\n",
-    "    ][\"Employee ID\"]\n",
+    "        def pack(eid):\n",
+    "            if not eid:\n",
+    "                return [\"\", \"\", \"\"]\n",
+    "            d = row_by_id[eid]\n",
+    "            return [eid, d.get(NAME_COL, \"\"), d.get(EMAIL_COL, \"\")]\n",
     "\n",
-    "    for root in sorted(roots, key=lambda x: row_by_id[x][\"Employee Name\"]):\n",
-    "        traverse(root, 0, seen, out_rows)\n",
+    "        row_data = pack(md) + pack(g3) + pack(g4)\n",
     "\n",
-    "    # Capture unmapped employees\n",
-    "    unmapped_ids = set(scope_df[\"Employee ID\"]) - seen\n",
-    "    for uid in unmapped_ids:\n",
-    "        unmapped.append(row_by_id[uid])\n",
+    "        # Employee's own details\n",
+    "        emp_data = [r.get(col, \"\") for col in output_cols[9:]]\n",
+    "        out_rows.append(row_data + emp_data)\n",
     "\n",
-    "    sheet_df = pd.DataFrame(out_rows)\n",
+    "    sheet_df = pd.DataFrame(out_rows, columns=output_cols)\n",
     "    sheet_df.to_excel(writer, sheet_name=bf2[:31], index=False)\n",
     "\n",
-    "if unmapped:\n",
-    "    pd.DataFrame(unmapped).to_excel(writer, sheet_name=\"Unmapped_Employees\", index=False)\n",
+    "if unmapped_rows:\n",
+    "    pd.DataFrame(unmapped_rows).to_excel(writer, sheet_name=\"Unmapped_Employees\", index=False)\n",
     "\n",
-    "writer.close()\n"
+    "writer.close()\n",
+    "print(\"✅ Created: TaskOne_v5_ColumnPath.xlsx\")\n"
    ]
   },
   {
