--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -9,85 +9,100 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "INPUT_FILE = \"GHA_source.xlsx\"\n",
-    "INPUT_SHEET = \"Data\"\n",
-    "\n",
-    "ID_COL = \"Employee ID\"\n",
-    "NAME_COL = \"Employee Name\"\n",
-    "EMAIL_COL = \"Employee Business Email Address\"\n",
-    "GCB_COL = \"Global Career Band\"\n",
-    "MGR_COL = \"Entity Manager Employee ID\"\n",
-    "BF2_COL = \"BF Level 2 Name\"\n",
-    "\n",
-    "# Read data\n",
-    "df = pd.read_excel(INPUT_FILE, sheet_name=INPUT_SHEET, dtype=str)\n",
-    "df.columns = df.columns.str.strip()\n",
-    "\n",
-    "# Lookup dictionaries\n",
-    "row_by_id = df.set_index(ID_COL).to_dict(\"index\")\n",
-    "\n",
-    "# Helper: find MD, GCB3, GCB4 up the chain\n",
-    "def trace_chain(emp_id):\n",
-    "    md = g3 = g4 = None\n",
-    "    seen = set()\n",
-    "    curr = emp_id\n",
-    "    while curr and curr in row_by_id and curr not in seen:\n",
-    "        seen.add(curr)\n",
-    "        gcb = str(row_by_id[curr][GCB_COL]).strip()\n",
-    "        if gcb == \"MD\" and md is None:\n",
-    "            md = curr\n",
-    "        elif gcb == \"3\" and g3 is None:\n",
-    "            g3 = curr\n",
-    "        elif gcb == \"4\" and g4 is None:\n",
-    "            g4 = curr\n",
-    "        curr = row_by_id[curr].get(MGR_COL)\n",
-    "    return md, g3, g4\n",
-    "\n",
-    "# Columns for output\n",
-    "output_cols = [\n",
-    "    \"MD ID\", \"MD Name\", \"MD Email\",\n",
-    "    \"GCB3 ID\", \"GCB3 Name\", \"GCB3 Email\",\n",
-    "    \"GCB4 ID\", \"GCB4 Name\", \"GCB4 Email\"\n",
-    "] + [\n",
-    "    \"Employee ID\", \"Employee Name\", \"Employee Business Email Address\",\n",
-    "    \"Global Career Band\", \"Employee Type\", \"Employee Status\",\n",
-    "    \"Legal Entity Name\", \"Work Location City\",\n",
-    "    \"Entity Manager Employee ID\", \"Entity Manager Employee Name\",\n",
-    "    \"Functional Manager Employee ID\", \"Functional Manager Employee Name\"\n",
+    "# Sample data\n",
+    "data = [\n",
+    "    [\"101\", \"Alice\",    \"5\", \"201\", \"Bob\",      \"alice@ex.com\"],\n",
+    "    [\"201\", \"Bob\",      \"4\", \"301\", \"Charlie\",  \"bob@ex.com\"],\n",
+    "    [\"301\", \"Charlie\",  \"3\", \"401\", \"Dana\",     \"charlie@ex.com\"],\n",
+    "    [\"401\", \"Dana\",     \"2\", None,  None,       \"dana@ex.com\"],\n",
+    "    [\"302\", \"Eva\",      \"5\", \"201\", \"Bob\",      \"eva@ex.com\"],\n",
+    "    [\"304\", \"Kirti\",    \"5\", \"305\", \"Inish\",    \"kirti@ex.com\"],\n",
+    "    [\"307\", \"Anshul\",   \"4\", \"305\", \"Inish\",    \"anshul@ex.com\"],\n",
+    "    [\"308\", \"Sowmya\",   \"5\", \"307\", \"Anshul\",   \"sowmya@ex.com\"],\n",
+    "    [\"305\", \"Inish\",    \"3\", \"306\", \"Vilma\",    \"inish@ex.com\"],\n",
+    "    [\"306\", \"Vilma\",    \"2\", \"504\", \"Abhishek\", \"vilma@ex.com\"],\n",
+    "    [\"504\", \"Abhishek\", \"1\", None,  None,       \"abhishek@ex.com\"],\n",
     "]\n",
     "\n",
-    "unmapped_rows = []\n",
-    "writer = pd.ExcelWriter(\"TaskOne_v5_ColumnPath.xlsx\", engine=\"xlsxwriter\")\n",
+    "columns = [\n",
+    "    \"Employee ID\", \"Employee Name\", \"Global Career Band\",\n",
+    "    \"Manager Employee ID\", \"Manager Employee Name\", \"Employee Email\"\n",
+    "]\n",
     "\n",
-    "for bf2 in sorted(df[BF2_COL].dropna().unique()):\n",
-    "    out_rows = []\n",
-    "    scope = df[df[BF2_COL] == bf2]\n",
-    "    for _, r in scope.iterrows():\n",
-    "        md, g3, g4 = trace_chain(r[ID_COL])\n",
-    "        if md is None and g3 is None and g4 is None:\n",
-    "            unmapped_rows.append(r)\n",
-    "            continue\n",
+    "df = pd.DataFrame(data, columns=columns)\n",
     "\n",
-    "        def pack(eid):\n",
-    "            if not eid:\n",
-    "                return [\"\", \"\", \"\"]\n",
-    "            d = row_by_id[eid]\n",
-    "            return [eid, d.get(NAME_COL, \"\"), d.get(EMAIL_COL, \"\")]\n",
+    "# Create a lookup by Employee ID\n",
+    "emp_lookup = df.set_index(\"Employee ID\").to_dict(\"index\")\n",
     "\n",
-    "        row_data = pack(md) + pack(g3) + pack(g4)\n",
+    "# Function to trace up the hierarchy to MD and GCB3\n",
+    "def trace_hierarchy(emp_id):\n",
+    "    seen = set()\n",
+    "    md_id = md_name = md_email = \"\"\n",
+    "    gcb3_id = gcb3_name = gcb3_email = \"\"\n",
+    "    reporting_mgr_id = reporting_mgr_name = reporting_mgr_email = \"\"\n",
     "\n",
-    "        # Employee's own details\n",
-    "        emp_data = [r.get(col, \"\") for col in output_cols[9:]]\n",
-    "        out_rows.append(row_data + emp_data)\n",
+    "    current_id = emp_id\n",
     "\n",
-    "    sheet_df = pd.DataFrame(out_rows, columns=output_cols)\n",
-    "    sheet_df.to_excel(writer, sheet_name=bf2[:31], index=False)\n",
+    "    while current_id and current_id not in seen:\n",
+    "        seen.add(current_id)\n",
+    "        person = emp_lookup.get(current_id)\n",
+    "        if not person:\n",
+    "            break\n",
     "\n",
-    "if unmapped_rows:\n",
-    "    pd.DataFrame(unmapped_rows).to_excel(writer, sheet_name=\"Unmapped_Employees\", index=False)\n",
+    "        gcb = str(person.get(\"Global Career Band\", \"\"))\n",
+    "        mgr_id = person.get(\"Manager Employee ID\")\n",
     "\n",
-    "writer.close()\n",
-    "print(\"✅ Created: TaskOne_v5_ColumnPath.xlsx\")\n"
+    "        if gcb == \"3\" and not gcb3_id:\n",
+    "            gcb3_id = current_id\n",
+    "            gcb3_name = person[\"Employee Name\"]\n",
+    "            gcb3_email = person[\"Employee Email\"]\n",
+    "        elif gcb == \"2\" and not md_id:\n",
+    "            md_id = current_id\n",
+    "            md_name = person[\"Employee Name\"]\n",
+    "            md_email = person[\"Employee Email\"]\n",
+    "\n",
+    "        if mgr_id:\n",
+    "            mgr = emp_lookup.get(mgr_id)\n",
+    "            if mgr and not reporting_mgr_id:\n",
+    "                reporting_mgr_id = mgr_id\n",
+    "                reporting_mgr_name = mgr[\"Employee Name\"]\n",
+    "                reporting_mgr_email = mgr[\"Employee Email\"]\n",
+    "\n",
+    "        current_id = mgr_id\n",
+    "\n",
+    "    return pd.Series([\n",
+    "        md_id, md_name, md_email,\n",
+    "        gcb3_id, gcb3_name, gcb3_email,\n",
+    "        reporting_mgr_id, reporting_mgr_name, reporting_mgr_email\n",
+    "    ])\n",
+    "\n",
+    "# Apply the trace to each employee\n",
+    "df_hierarchy = df.copy()\n",
+    "df_hierarchy[[\n",
+    "    \"MD ID\", \"MD Name\", \"MD Email\",\n",
+    "    \"GCB3 ID\", \"GCB3 Name\", \"GCB3 Email\",\n",
+    "    \"Reporting Manager ID\", \"Reporting Manager Name\", \"Reporting Manager Email\"\n",
+    "]] = df_hierarchy[\"Employee ID\"].apply(trace_hierarchy)\n",
+    "\n",
+    "# Optional: drop duplicates if employee data got expanded\n",
+    "df_hierarchy = df_hierarchy.drop_duplicates(subset=[\"Employee ID\"])\n",
+    "\n",
+    "# Rearranging columns as required\n",
+    "final_columns = [\n",
+    "    \"MD ID\", \"MD Name\", \"MD Email\",\n",
+    "    \"GCB3 ID\", \"GCB3 Name\", \"GCB3 Email\",\n",
+    "    \"Reporting Manager ID\", \"Reporting Manager Name\", \"Reporting Manager Email\",\n",
+    "    \"Employee ID\", \"Employee Name\", \"Employee Email\",\n",
+    "    \"Global Career Band\",  # can help with filtering\n",
+    "    # You can add more columns here if needed\n",
+    "]\n",
+    "\n",
+    "final_df = df_hierarchy[final_columns]\n",
+    "\n",
+    "# Save to Excel\n",
+    "final_df.to_excel(\"Task_One_Final_Output.xlsx\", index=False)\n",
+    "print(\"✅ Output saved to 'Task_One_Final_Output.xlsx'\")\n",
+    "\n"
    ]
   },
   {
